add solution file

--- a/osw/osw_complete.html
+++ b/osw/osw_complete.html
@@ -49,7 +49,7 @@
   </div>
 
   <script type="text/javascript">
-    const OKTA_ORG_URL = 'https://cbarry.oktapreview.com';
+    const OKTA_ORG_URL = 'https://oktaiceXXX.oktapreview.com';
     const DEFAULT_OIDC_APP = 'http://localhost:8080/retrieveTokensXHR';
     var relayState = getQueryVariable('relayState') || DEFAULT_OIDC_APP;
     console.log("relayState: " + relayState);
